simulation/result.txt
Traceback (most recent call last):
  File "/home/sdn/ljh/LongHaulCC/simulation/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Scripting.py", line 87, in waf_entry_point
    set_main_module(Context.run_dir+os.sep+Context.WSCRIPT_FILE)
  File "/home/sdn/ljh/LongHaulCC/simulation/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Scripting.py", line 112, in set_main_module
    Context.g_module=Context.load_module(file_path)
  File "/home/sdn/ljh/LongHaulCC/simulation/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Context.py", line 281, in load_module
    exec(compile(code,path,'exec'),module.__dict__)
  File "/home/sdn/ljh/LongHaulCC/simulation/wscript", line 105
    print name.ljust(25),
          ^
SyntaxError: invalid syntax
